--- a/components/Input.module.css
+++ b/components/Input.module.css
@@ -4,6 +4,7 @@
     position: relative;
     flex-direction: column;
     width: 100%;
+    margin: 5px;
     margin-bottom: 1em;
 }
 
@@ -56,12 +57,12 @@
 @media (min-width: 768px) {
     
     .field label {
-        font-size: 18px;
+        font-size: 13px;
     }
     
     .field input {
-        line-height: 1.7em;
-        font-size: 24px;
+        line-height: 0.7em;
+        font-size: 18px;
     }
 
 }
