--- a/components/Slug.module.css
+++ b/components/Slug.module.css
@@ -40,6 +40,7 @@
 }
 
 .shopList {
+    position: relative;
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -68,11 +69,12 @@
 }
 .storie {
     width: 80%;
+    max-width: 370px;
     margin: 50px auto;
 }
 
 .storieLeft {
-    width: 60%;
+    width: 160px;
     margin-bottom: -95px;
     margin-left: 8px;
 }
@@ -176,7 +178,7 @@
     height: 100%;
     padding: 20px;
     padding-top: 55px;
-    background-color: #ffffffd8;
+    background-color: #fffffff5;
     border-radius: 15px;
     border: 1px solid #0000009c;
     z-index: 1;
@@ -331,24 +333,30 @@ p.sinopse::-webkit-scrollbar-thumb{
 
 
 
-@media (min-width: 768px) {
+@media (min-width: 576px) {
 
-
-
-    .messages {
-        width: 62%;
-        border-top: none;
-        overflow: auto;
+    .cinemark p {
+        padding-left: 30px;
     }
+    
     .shopList .ulList {
-        padding-top: 5px;
-        overflow: auto;
-        max-height: initial;
+        max-width: 820px;
+        margin: 0 auto;
     }
 
-    .main {
-        flex-direction: row;
-        /* height: calc(100vh - 138px);
-        overflow: auto; */
+}
+
+@media (min-width: 992px) {
+    
+    .cinemark img {
+        position: absolute;
+        top: 35px;
+        margin: 0 auto;
+        left: calc(50vw - 173px);
+    }
+
+    .storieLeft {
+        width: 225px;
+        margin-bottom: -140px;
     }
 }
