--- a/components/admin/Admin.module.css
+++ b/components/admin/Admin.module.css
@@ -7,6 +7,7 @@
     flex-direction: column;
     height: calc(100vh - 50px);
     overflow: auto;
+    padding-bottom: 40px;
 }
 
 .alert {
@@ -173,7 +174,7 @@
 }
 
 .formPost label.user .avatar {   
-    width: 100%;
+    width: 200px;
     border-radius: 12px;
 }
 
@@ -192,7 +193,7 @@
 
 .field label {
     color: #5d5d5d;
-    font-size: 14px;
+    font-size: 13px;
     font-weight: bold;
     position: absolute;
     z-index: 2;
@@ -255,9 +256,12 @@
 
 
 @media (min-width: 768px) {
+    .form .fields {
+        flex-direction: row;
+    }
 
     .messageList {
-        width: 45%;
+        width: 40%;
         max-width: 340px;
     }
 
@@ -273,8 +277,15 @@
     }
 
     .main {
+        display: flex;
         flex-direction: row;
-        /* height: calc(100vh - 138px);
-        overflow: auto; */
+        flex-wrap: wrap;
+        justify-content: center;
+        padding-bottom: 40px;
+    }
+
+    .formPost label.user .avatar {   
+        width: 100%;
     }
 }
+
