--- a/components/admin/CardMessage.module.css
+++ b/components/admin/CardMessage.module.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     width: 90%;
+    max-width: 450px;
     padding: 10px;
     border-radius: 10px;
     margin: auto;
